# OM3D

./: .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
TP/: .gitignore  CMakeLists.txt  README.md
TP/shaders/: basic.frag  basic.vert  color.frag  color.vert  debug.glsl  display_g_buffer.frag  fixed_color.frag  fps.frag  g_buffer.frag  imgui.frag  lit.frag  pointlight.frag  red.frag  screen.vert  structs.glsl  sunlight.frag  tonemap.comp  tonemap.frag  utils.glsl
TP/src/: BufferMapping.cpp  BufferMapping.h  ByteBuffer.cpp  ByteBuffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImageFormat.cpp  ImageFormat.h  Material.cpp  Material.h  PointLight.h  Program.cpp  Program.h  RenderContext.cpp  RenderContext.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneView.cpp  SceneView.h  Scene_loader.cpp  StaticMesh.cpp  StaticMesh.h  StaticMesh_loaders.cpp  Texture.cpp  Texture.h  TypedBuffer.h  Vertex.h  defines.h  graphics.cpp  graphics.h  main.cpp  shader_structs.h  utils.cpp  utils.h
data/: cube.glb  sphere.glb
data/cubemaps/: sky_nx.tga  sky_ny.tga  sky_nz.tga  sky_px.tga  sky_py.tga  sky_pz.tga
shaders/: basic.vert  brdf.comp  equirec_cube.comp  g_buffer.frag  g_debug.frag  g_global_illumination.frag  g_local_illumination.frag  g_render.frag  imgui.vert  lighting.glsl  lit.frag  passthrough.frag  screen.vert  sky.frag  structs.glsl  tonemap.frag  utils.glsl
src/: BoundingSphere.cpp  BoundingSphere.h  BufferMapping.cpp  BufferMapping.h  ByteBuffer.cpp  ByteBuffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImageFormat.cpp  ImageFormat.h  Material.cpp  Material.h  PassTypeEnum.h  PointLight.h  Program.cpp  Program.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Scene_loader.cpp  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  TimestampQuery.cpp  TimestampQuery.h  TypedBuffer.h  Vertex.h  defines.h  graphics.cpp  graphics.h  main.cpp  shader_structs.h  utils.cpp  utils.h
src/go_here/: imgui.ini
